--- a/content/publication/data_efficient/cite.bib
+++ b/content/publication/data_efficient/cite.bib
@@ -1,1 +1,6 @@
-https://arxiv.org/abs/2109.02040
+@article{bitton2021data,
+  title={Data Efficient Masked Language Modeling for Vision and Language},
+  author={Bitton, Yonatan and Stanovsky, Gabriel and Elhadad, Michael and Schwartz, Roy},
+  journal={arXiv preprint arXiv:2109.02040},
+  year={2021}
+}
